FullQa New/src/objects/DialogTech_SourceTrak__c.object
<CustomObject>
    <fields>
        <fullName>AdGroup__c</fullName>
        <label>AdGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Status__c</fullName>
        <label>Assignment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Recording__c</fullName>
        <label>Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Call_Timestamp__c</fullName>
        <label>Call Timestamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Caller_ID__c</fullName>
        <label>Caller ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>DialogTech SourceTraks</relationshipLabel>
        <relationshipName>DialogTech_SourceTraks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DialogTech SourceTraks</relationshipLabel>
        <relationshipName>DialogTech_SourceTraks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dialed_Number__c</fullName>
        <label>Dialed Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enhanced_Minutes__c</fullName>
        <label>Enhanced Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Reason__c</fullName>
        <label>Error Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ibp_Custom__c</fullName>
        <label>Ibp Custom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DialogTech SourceTraks</relationshipLabel>
        <relationshipName>DialogTech_SourceTraks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MoreDetailsAvailable__c</fullName>
        <label>MoreDetailsAvailable</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Attempts__c</fullName>
        <label>Number of Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DialogTech SourceTraks (Opportunity)</relationshipLabel>
        <relationshipName>DialogTech_SourceTraks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Label__c</fullName>
        <label>Phone Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recording__c</fullName>
        <label>Recording</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_ID__c</fullName>
        <label>Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Talk_Minutes__c</fullName>
        <label>Talk Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_To_Number__c</fullName>
        <label>Transfer To Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voicemail__c</fullName>
        <label>Voicemail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>domain__c</fullName>
        <label>domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ibp_keyword__c</fullName>
        <label>ibp keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ibp_match_type__c</fullName>
        <label>ibp match type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ibp_unique_id__c</fullName>
        <label>ibp unique id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>keyword__c</fullName>
        <label>keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DialogTech SourceTrak</label>
    <nameField>
        <displayFormat>dtst{0000}</displayFormat>
        <label>DialogTech AutoID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DialogTech SourceTraks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>